# Workshop-AI-Agent-SIT

./: .gitignore  README.md  order-example.json  pyproject.toml  sample-mail-oneline.txt  sample-mail.txt  workshop_evaluation_pipeline.ipynb
.deepeval/: .deepeval_telemetry.txt
app/: main.py
app/evaluation/: evaluators.py  providers.py  utils.py
app/models/: evaluation.py  order.py  retail.py
app/prompts/: soul.md
app/routers/: assistant.py  order.py
app/services/: agent.py  database.py  gmail.py  langfuse_client.py
data/: initial_store.json
data/evaluation_data/: eval_data.json
scripts/: run_evaluation_pipeline.py
